# ExamGrader

./: .gitignore  CMakeLists.txt  README.md
config/: config.ini
include/exam_grader/: ConfigModule.h  ExamGrader.h
src/: ConfigModule.cpp  ExamGrader.cpp  main.cpp
